// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SimpleTableRow should match the snapshot 1`] = `<SimpleTableRow__StyledTableRow />`;

exports[`SimpleTableRow should match the snapshot when labeled 1`] = `
<SimpleTableRow__StyledTableRow>
  <TableCell
    redirect={false}
  >
    mock
  </TableCell>
</SimpleTableRow__StyledTableRow>
`;

exports[`SimpleTableRow should match the snapshot with mock data 1`] = `
<SimpleTableRow__StyledTableRow>
  <TableCell
    key="0"
    redirect={false}
  >
    val1
  </TableCell>
  <TableCell
    key="1"
    redirect={false}
  >
    val2
  </TableCell>
</SimpleTableRow__StyledTableRow>
`;
